--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     },
     "homepage": "https://github.com/davidfig/pixi-viewport#readme",
     "devDependencies": {
-        "pixi.js": "^8.0.4",
         "@typescript-eslint/parser": "^5.5.0",
         "chai": "^4.3.4",
         "clicked": "^4.0.3",
@@ -62,6 +61,7 @@
         "jsdoc": "^3.6.3",
         "lint-staged": "^13.1.0",
         "pixi-ease": "^3.0.7",
+        "pixi.js": "^7.0.0",
         "raf": "^3.4.1",
         "typescript": "^4.5.2",
         "vite": "4.4.10",
@@ -70,5 +70,8 @@
         "yy-fps": "^2.0.0",
         "yy-jsdoc-template": "^1.3.0",
         "yy-random": "^1.10.2"
+    },
+    "peerDependencies": {
+        "pixi.js": "^7.0.0"
     }
 }
